src/terraform_iac/config-3-aws/modules/vpc/main.tf
/*
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "main-vpc"
  }
}

resource "aws_subnet" "public_subnet_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-west-2a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-1"
  }
}

resource "aws_subnet" "public_subnet_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-west-2b"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-2"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "main-igw"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "public-route-table"
  }
}

resource "aws_route_table_association" "public_association_1" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_association_2" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_route_table.id
}
*/

module "vpce" {
  source = "vpce"

  app_component                 = var.app_component
  app_env                       = var.app_env
  app_name                      = var.app_name
  aws_primary_region            = var.aws_primary_region
  aws_vpc_id                    = var.aws_vpc_id #vpc-04ce2894d2f99bbb8
  sg_ingress_object             = var.sg_ingress_object
  tags                          = var.tags
  private_subnet_route_table_id = var.private_subnet_route_table_id
  public_subnet_route_table_id  = var.public_subnet_route_table_id
  private_subnet_ids            = var.private_subnet_ids
}
